--- a/Echoes/Echoes/Views/Existence/Index.cshtml
+++ b/Echoes/Echoes/Views/Existence/Index.cshtml
@@ -6,7 +6,12 @@
 }
 
 <div style="padding-top: 100px;">
-    <span>You stand in purgatory. You might want to exist <a href="/Existence/The_Warren">somewhere</a>.</span>
+    <span>You stand in purgatory. You might want to exist somewhere:</span>
+
+    @foreach (var place in Model.KnownPlaces)
+    {
+        <p><a href="/existence/@place.Name">@place.Name</a></p>
+    }
 </div>
 
 @section Scripts {
