clearing out data and some changes for tutotial and MATH

--- a/Echoes/Echoes/Pages/_Layout.cshtml
+++ b/Echoes/Echoes/Pages/_Layout.cshtml
@@ -102,6 +102,9 @@
                 Cookies.set('tutorialMode', 'on');
             } else {
                 Cookies.set('tutorialMode', 'off');
+
+                //Wipe out all the tutorial bits
+                $('.tutorial').remove();
             }
         });
 
