--- a/Echoes/Echoes/Views/Existence/Place.cshtml
+++ b/Echoes/Echoes/Views/Existence/Place.cshtml
@@ -70,7 +70,16 @@
            var outputText = record.Spoken ? String.Format("{0} says \"{1}\"", record.Actor.Name, record.Observance) : String.Format("{0} {1}", record.Actor.Name, record.Observance);
 
           <text>
-            Kinesis_Text('@outputText', $('.parserOutput'), { Orientation: { direction: 'random', FadeOnSweep: true } }, undefined, { initialDelay: timer });
+            Kinesis_Text('@outputText', $('.parserOutput'),
+                {
+                    Orientation: { direction: 'random' },
+                    FadeOnSweep: true,
+                    Color: 'random',
+                    RandomizeEffect: { In: true, Out: true }
+                },
+                undefined,
+                { initialDelay: timer });
+
             timer += 1250;
           </text>
        }
