woops I broke the index page >.>

--- a/Echoes/Echoes/Pages/Index.cshtml
+++ b/Echoes/Echoes/Pages/Index.cshtml
@@ -4,11 +4,14 @@
     ViewData["Title"] = "The Void";
 }
 
-<div class="textParserClient">
-    <div class="animate-final" style="display:none;">
-        <h3>
-            <a href="/existence">Exist</a>
-        </h3>
+
+<div class="parserClient">
+    <div class="textParserClient">
+        <div class="animate-final" style="display:none;">
+            <h3>
+                <a href="/existence">Exist</a>
+            </h3>
+        </div>
     </div>
 </div>
 
