--- a/Echoes/Echoes/Views/Existence/Place.cshtml
+++ b/Echoes/Echoes/Views/Existence/Place.cshtml
@@ -73,7 +73,7 @@
         var timer = 0;
        @foreach (var record in Model.NewToYou)
        {
-           var outputText = record.Spoken ? String.Format("{0} says \"{1}\"", record.Actor.Name, record.Observance) : String.Format("{0} {1}", record.Actor.Name, record.Observance);
+           var outputText = record.Spoken ? String.Format("{0} says \"{1}\"", record.Actor.Name, record.Observance) : Echoes.Data.Interp.GrammaticalReconstructor.ConstructFromMemory(record);
 
           <text>
             Kinesis_Text('@outputText', $('.parserOutput'),
